# rspassimpt

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: parse.rs
src/: cli.rs  gpg.rs  i18n.rs  lib.rs  main.rs  pipeline.rs  sanitize.rs  store.rs
